@@ -7,6 +7,9 @@ version 1.9.4, in progress
   GUI for panel plots
 - New function, inlist(): gives the position of a series
   within a named list or zero if the series is not present
+- New "set" variable, matrix_mask, which can be used to
+  control the included observations when constructing
+  matrices from series
 - Fix bug: estimates getting out of order for some
   equation systems if the constant was not given in first
   place among the regressors
